--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,43 +20,43 @@ test:
     - bluesky.callbacks
 
 outputs:
-- name: bluesky-base
-  build:
-    noarch: python
-    script: python -m pip install . --no-deps -vv
-  requirements:
-    host:
-      - python >=3.6
-      - pip
-    run:
-      - python >=3.6
-      - cycler
-      - event-model >=1.10.0
-      - historydict
-      - msgpack-numpy
-      - msgpack-python
-      - numpy
-      - super_state_machine
-      - toolz
-      - tqdm >=4.44
-      - zict
-- name: bluesky
-  build:
-    noarch: python
-  requirements:
-    host:
-      - python >=3.6
-      - pip
-    run:
-      - databroker
-      - doct
-      - ipython
-      - lmfit
-      - matplotlib
-      - ophyd
-      - python >=3.6
-      - pyzmq
-      - {{ pin_subpackage('bluesky-base', max_pin="x.x.x") }}
+  - name: bluesky-base
+    build:
+      noarch: python
+      script: {{ PYTHON }} -m pip install . --no-deps -vv
+    requirements:
+      host:
+        - python >=3.6
+        - pip
+      run:
+        - python >=3.6
+        - cycler
+        - event-model >=1.10.0
+        - historydict
+        - msgpack-numpy
+        - msgpack-python
+        - numpy
+        - super_state_machine
+        - toolz
+        - tqdm >=4.44
+        - zict
+  - name: bluesky
+    build:
+      noarch: python
+    requirements:
+      host:
+        - python >=3.6
+        - pip
+      run:
+        - databroker
+        - doct
+        - ipython
+        - lmfit
+        - matplotlib
+        - ophyd
+        - python >=3.6
+        - pyzmq
+        - {{ pin_subpackage('bluesky-base', max_pin="x.x.x") }}
 
 about:
   home: https://blueskyproject.io
