--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,11 +28,10 @@ outputs:
       noarch: python
       script: python -m pip install . --no-deps -vv
     requirements:
-      build:
-        - setuptools
       host:
         - python >=3.8
         - pip
+        - setuptools
       run:
         - python >=3.8
         - cycler
@@ -51,10 +50,11 @@ outputs:
       noarch: python
     requirements:
       host:
-        - python >=3.8
+        - python
         - pip
+        - setuptools
       run:
-        - python >=3.8
+        - python
         - databroker
         - doct
         - ipython
