--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
 
 build:
   number: 1
+  noarch: python
 
 # to avoid creating redundant CI jobs, conda-smithy needs python
 # to be used in all outputs, including the implicit global one.
@@ -55,6 +56,7 @@ outputs:
       host:
         - {{ pin_subpackage('bluesky-base', max_pin="x.x.x") }}
       run:
+        - python >={{ python_min }}
         - databroker
         - doct
         - ipython
